<resources>
    <string name="app_name">tracker_task</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name_hint">User name</string>
    <string name="password_hint">Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="sign_in_button_text">SIGN IN</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_up_title">Sign up</string>
</resources>